k8s/products-definition.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  #creationTimestamp: null
  #labels:
  #  app: products
  name: products
  namespace: kubenode-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: products
  #strategy: {}
  template:
    metadata:
      #creationTimestamp: null
      labels:
        app: products # pod name
    spec:
      containers:
      - image: devric/kubenode_products
        name: kubenode-products-p27pc
        #resources: {}
#status: {}

---

apiVersion: v1
kind: Service
metadata:
  name: products-service
  namespace: kubenode-dev
spec:
  selector:
    app: products # this is the pod selector
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
